@@ -67,6 +67,7 @@ public class ConfigScalingHealth extends AdaptiveConfig {
   public static float DIFFICULTY_DAMAGE_MULTIPLIER = 0.1f;
   public static float POTION_CHANCE_HOSTILE = 0.375f;
   public static float POTION_CHANCE_PASSIVE = 0.025f;
+  public static float MOB_XP_BOOST = 0.01f;
   // Mob Health
   public static boolean ALLOW_PEACEFUL_EXTRA_HEALTH = true;
   public static boolean ALLOW_HOSTILE_EXTRA_HEALTH = true;
@@ -266,6 +267,10 @@ public class ConfigScalingHealth extends AdaptiveConfig {
           + " this effect requires the mob to have a certain amount of \"difficulty\" left after"
           + " it has been given extra health and damage. So entering 1 won't guarantee potion"
           + " effects.");
+      MOB_XP_BOOST = config.getFloat("XP Boost", CAT_MOB,
+          0.01f, 0.0f, 1.0f,
+          "Additional XP (as percentage) per point of difficulty. For example, if this is 0.01, a"
+          + " mob will drop 2x (+1.0x) XP at 100 difficulty and 3x (+2.0x) at 200");
       // Health
       ALLOW_PEACEFUL_EXTRA_HEALTH = loadBoolean("Allow Peaceful Extra Health", CAT_MOB_HEALTH,
           ALLOW_PEACEFUL_EXTRA_HEALTH,
